provision/roles/tcp-to-proxy/files/add-iptables-rules-redsocks.txt
*nat

:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:REDSOCKS - [0:0]

-A OUTPUT -p tcp -j REDSOCKS

-A REDSOCKS -d 0.0.0.0/8 -j RETURN
-A REDSOCKS -d 10.0.0.0/8 -j RETURN
-A REDSOCKS -d 100.64.0.0/10 -j RETURN
-A REDSOCKS -d 127.0.0.0/8 -j RETURN
-A REDSOCKS -d 169.254.0.0/16 -j RETURN
-A REDSOCKS -d 172.16.0.0/12 -j RETURN
-A REDSOCKS -d 192.168.0.0/16 -j RETURN
-A REDSOCKS -d 198.18.0.0/15 -j RETURN
-A REDSOCKS -d 224.0.0.0/4 -j RETURN
-A REDSOCKS -d 240.0.0.0/4 -j RETURN

-A REDSOCKS -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 12380
-A REDSOCKS -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 12443
-A REDSOCKS -p tcp -j REDIRECT --to-ports 12345

COMMIT
